Tests/ContributeWordPressTests/Errors/URLError.swift
import Foundation

enum URLError: String, EquatableError {
  case invalidURLString
}
